crates/edgezero-macros/tests/ui/secret_with_serde_skip_serializing_if.stderr
error: `#[secret]` is incompatible with `#[serde(skip_serializing_if)]` — the derive emits the Rust field name verbatim and config validate / push round-trip it via TOML
  --> tests/ui/secret_with_serde_skip_serializing_if.rs:12:5
   |
12 |     #[serde(skip_serializing_if = "String::is_empty")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
